deployment/kubernetes/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audra-rad
  labels:
    app: audra-rad
    environment: production
